Reduce compile time warnings
[ci skip]